refactor(download): use downloads API for more robust video download handling
Replace manual Blob URL handling with the downloads API to improve reliability and user experience. This includes prompting the user for a save location and ensuring proper URL revocation after download completion or failure.

--- a/01_RecordSelectors/manifest.json
+++ b/01_RecordSelectors/manifest.json
@@ -8,7 +8,8 @@
     "storage",
     "scripting",
     "tabs",
-    "offscreen"
+    "offscreen",
+    "downloads"
   ],
   "background": {
     "service_worker": "background.js"
@@ -23,4 +24,4 @@
   "action": {
     "default_popup": "popup/popup.html"
   }
-} 
+}
