--- a/01_RecordSelectors/manifest.json
+++ b/01_RecordSelectors/manifest.json
@@ -21,6 +21,15 @@
       "run_at": "document_idle"
     }
   ],
+  "web_accessible_resources": [
+    {
+      "resources": [ "step_gen_prompt.md" ],
+      "matches": [ "<all_urls>" ]
+    }
+  ],
+  "host_permissions": [
+    "https://generativelanguage.googleapis.com/*"
+  ],
   "action": {
     "default_popup": "popup/popup.html"
   }
