refactor(popup): restructure UI and logic for AI integration and settings
- Replaced "Generate Steps" section with "AI Magic" for enhanced functionality
- Added settings section for API key management
- Improved button state management and error handling
- Updated UI elements and event listeners for new features
- Removed deprecated generated steps functionality

--- a/01_RecordSelectors/manifest.json
+++ b/01_RecordSelectors/manifest.json
@@ -24,7 +24,7 @@
   "web_accessible_resources": [
     {
       "resources": [ "step_gen_prompt.md" ],
-      "matches": [ "<all_urls>" ]
+      "matches": [ "chrome-extension://*/*" ]
     }
   ],
   "host_permissions": [
