--- a/01_RecordSelectors/manifest.json
+++ b/01_RecordSelectors/manifest.json
@@ -2,7 +2,7 @@
   "manifest_version": 3,
   "name": "Click & Screen Recorder",
   "version": "1.1",
-  "description": "Records clicks and the screen of a webpage.",
+  "description": "Records clicks, inputs, and screen activity, with AI analysis.",
   "permissions": [
     "activeTab",
     "storage",
@@ -12,25 +12,29 @@
     "downloads"
   ],
   "background": {
-    "service_worker": "background.js"
+    "service_worker": "dist/background.js"
   },
-  "content_scripts": [
-    {
-      "matches": ["<all_urls>"],
-      "js": ["content/content.js"],
-      "run_at": "document_idle"
-    }
-  ],
   "web_accessible_resources": [
     {
-      "resources": [ "step_gen_prompt.md" ],
-      "matches": [ "chrome-extension://*/*" ]
+      "resources": [ "step_gen_prompt.md", "offscreen/offscreen.html" ],
+      "matches": [ "<all_urls>" ]
     }
   ],
   "host_permissions": [
+    "<all_urls>",
     "https://generativelanguage.googleapis.com/*"
   ],
   "action": {
-    "default_popup": "popup/popup.html"
-  }
+    "default_popup": "popup/popup.html",
+    "default_icon": {
+        "16": "icons/icon16.png",
+        "48": "icons/icon48.png",
+        "128": "icons/icon128.png"
+    }
+  },
+  "icons": {
+        "16": "icons/icon16.png",
+        "48": "icons/icon48.png",
+        "128": "icons/icon128.png"
+    }
 }
