refactor: improve code structure and fix type safety issues
- Refactor `clearVideoResources` to be async and call `saveState`
- Improve type safety in `chrome.runtime.onMessage` listeners
- Move `RecordedItem` and `ExtensionState` interfaces to higher scope in popup.ts
- Update Gemini API key loading to use a promise
- Adjust `maxOutputTokens` in Gemini API config for better performance
- Fix `matches` in `web_accessible_resources` for security
- Remove redundant `stopMediaStreams` call in `stopRecording`

--- a/01_RecordSelectors/manifest.json
+++ b/01_RecordSelectors/manifest.json
@@ -17,7 +17,7 @@
   "web_accessible_resources": [
     {
       "resources": [ "step_gen_prompt.md", "offscreen/offscreen.html" ],
-      "matches": [ "<all_urls>" ]
+      "matches": [ "chrome-extension://*/*" ]
     }
   ],
   "host_permissions": [
