--- a/02_TrackWeb/package.json
+++ b/02_TrackWeb/package.json
@@ -1,11 +1,14 @@
 {
   "name": "web-time-tracker",
   "version": "1.0.0",
+  "private": true,
+  "license": "MIT",
   "description": "A Chrome extension to track time spent on websites.",
   "main": "dist/background.js",
   "scripts": {
     "build": "webpack --mode=production",
-    "dev": "webpack --mode=development --watch"
+    "dev": "webpack --mode=development --watch",
+    "lint": "eslint 'src/**/*.{js,ts}'"
   },
   "devDependencies": {
     "@types/chrome": "^0.0.257",
@@ -13,7 +16,9 @@
     "ts-loader": "^9.4.2",
     "typescript": "^5.0.0",
     "webpack": "^5.88.0",
-    "webpack-cli": "^5.1.4"
+    "webpack-cli": "^5.1.4",
+    "eslint": "^8.0.0",
+    "eslint-plugin-typescript": "^latest"
   },
   "dependencies": {
     "idb": "^8.0.2"
